fix center/align

--- a/index.css
+++ b/index.css
@@ -1,6 +1,4 @@
-html,body{
-    margin: 0;
-}
+html{margin: 0;}
 
 header,#console, main{
     margin: 0 auto 70px;
@@ -14,12 +12,8 @@ header,#console, main{
 body{
     display: flex;
     flex-direction: column;
-
     height: 100vh;
-}
-
-body {
-	background-color: #000
+    background-color: #000
 }
 
 #console {
